# motoman

./: .gitignore  Makefile  README.md  my_database.sqlite  note.md  reconstruct_start_config.txt  reconstruct_stop_config.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci_focal.yml
camera_info/: ost.yaml  package.xml  setup.cfg  setup.py
camera_info/camera_info/: camera_info_publisher.py
docker/: .env  Dockerfile  docker-compose-gui-nvidia.yml  docker-compose-gui.yml  docker-compose.yml
industrial_reconstruction_archive/archive/: camera_intrinsic.json
motoman/: package.xml  setup.cfg  setup.py
motoman/motoman/: my_node.py
motoman_ar2010_support/: package.xml
motoman_ar2010_support/launch/: load_ar2010.launch  robot_interface_streaming_ar2010.launch
motoman_ar2010_support/test/: launch_test_ar2010.xml
motoman_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
motoman_driver/motoman_driver/: my_node.py
motoman_es_support/: package.xml
motoman_es_support/urdf/: es165_macro.xacro  es200_120_macro.xacro
motoman_gp110_support/: .catkin_lint  package.xml
motoman_gp110_support/launch/: load_gp110.launch
motoman_gp12_support/: package.xml
motoman_gp12_support/launch/: load_gp12.launch  robot_interface_streaming_gp12.launch  robot_state_visualize_gp12.launch  test_gp12.launch
motoman_gp12_support/test/: launch_test.xml
motoman_gp12_support/urdf/: gp12.xacro
motoman_gp165r_support/: package.xml
motoman_gp165r_support/launch/: load_gp165r.launch  load_gp165r_equipped.launch
motoman_gp180_support/: .catkin_lint  package.xml
motoman_gp180_support/config/: opw_parameters_gp180.yaml
motoman_gp180_support/launch/: load_gp180.launch  load_gp180_120.launch
motoman_gp200r_support/: package.xml
motoman_gp200r_support/launch/: load_gp200r.launch
motoman_gp20hl_support/: package.xml
motoman_gp20hl_support/launch/: load_gp20hl.launch
motoman_gp215_support/: package.xml
motoman_gp215_support/launch/: load_gp215.launch  test_gp215.launch
motoman_gp225_support/: package.xml
motoman_gp225_support/config/: opw_parameters_gp225.yaml
motoman_gp225_support/launch/: load_gp225.launch  test_gp225.launch
motoman_gp225_support/urdf/: gp225_macro.xacro
motoman_gp250_support/: package.xml
motoman_gp250_support/launch/: load_gp250.launch  test_gp250.launch
motoman_gp25_support/: package.xml
motoman_gp25_support/launch/: load_gp25.launch  load_gp25_12.launch
motoman_gp35l_support/: package.xml
motoman_gp35l_support/launch/: load_gp35l.launch
motoman_gp4_support/: package.xml
motoman_gp4_support/launch/: load_gp4.launch
motoman_gp50_support/: package.xml
motoman_gp50_support/launch/: load_gp50.launch
motoman_gp70l_support/: package.xml
motoman_gp70l_support/launch/: load_gp70l.launch
motoman_gp7_support/: package.xml
motoman_gp7_support/launch/: load_gp7.launch  robot_interface_streaming_gp7.launch  robot_state_visualize_gp7.launch  test_gp7.launch
motoman_gp7_support/test/: launch_test_gp7.xml
motoman_gp7_support/urdf/: gp7.xacro
motoman_gp88_support/: .catkin_lint  package.xml
motoman_gp88_support/launch/: load_gp88.launch
motoman_gp8_support/: package.xml
motoman_gp8_support/launch/: load_gp8.launch  (+3 more)
motoman_gp8l_support/: package.xml
motoman_hc10_support/: package.xml
motoman_hc20_support/: CMakeLists.txt  package.xml
motoman_hc20_support/config/: opw_parameters_hc20.yaml  opw_parameters_hc30pl.yaml
motoman_hc20_support/launch/: load_hc20.launch  load_hc20dtp.launch  load_hc30pl.launch  robot_interface_streaming_hc20dtp.launch  robot_interface_streaming_hc30pl.launch  robot_state_visualize_hc20dtp.launch  robot_state_visualize_hc30pl.launch  test_hc20dtp.launch  test_hc30pl.launch
motoman_hc20_support/urdf/: hc20_macro.xacro  hc30pl_macro.xacro
motoman_ma2010_support/: package.xml
motoman_mh110_support/: package.xml
motoman_mh12_support/: package.xml
motoman_mh50_support/: package.xml
motoman_mh5_2f85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
motoman_mh5_driver/: CMakeLists.txt  motoman_mh5_driver.xml  package.xml
motoman_mh5_driver/include/motoman_mh5_driver/: control.hpp  motoman_mh5_driver.hpp  visibility_control.hpp
motoman_mh5_driver/src/: control.cpp  motoman_mh5_driver.cpp
motoman_mh5_driver/test/: test_load_motoman_mh5_driver.cpp
motoman_mh5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
motoman_mh5_ros2_control/: CMakeLists.txt  package.xml
motoman_mh5_support/: CMakeLists.txt  package.xml  setup.cfg  setup.py
motoman_mh5_support/config/: robot_state_visualize.rviz
motoman_mh5_support/launch/: load_mh5.launch  load_mh5l.launch  robot_interface_streaming_mh5l.launch  robot_state_visualize_mh5l.launch  test_mh5.launch
motoman_mh5_support/meshes/mh5_old_variants/visual/: link_3_u.stl
motoman_mh5_support/motoman_mh5_support/: my_node.py
motoman_mh5_support/src/: my_node.cpp
motoman_mh5_support/urdf/: mh5_2f85.urdf  mh5_2f85.xacro  mh5_macro.xacro
motoman_motomini_support/: package.xml
motoman_motopos_d500_support/: package.xml
motoman_motopos_mh1655_support/: CMakeLists.txt  package.xml
motoman_motopos_mh1655_support/launch/: load_motopos_mh1655.launch  test_motopos_mh1655.launch
motoman_motopos_mh1655_support/test/: launch_test.xml
motoman_motopos_mh1655_support/urdf/: motopos_mh1655.xacro  motopos_mh1655_macro.xacro
motoman_mpx1950_support/: package.xml
motoman_ms210_support/: package.xml
motoman_msgs/: package.xml  setup.cfg  setup.py
motoman_msgs/motoman_msgs/: my_node.py
motoman_resources/: package.xml  setup.cfg  setup.py
motoman_sda10f_support/: package.xml
motoman_sia10d_support/: package.xml
motoman_sia10f_support/: package.xml
motoman_sia20d_support/: package.xml
motoman_sia30d_support/: CMakeLists.txt  package.xml
motoman_sia50_support/: package.xml
motoman_sia5d_support/: package.xml
moveit/: README.md
reconstruct_plan/: CMakeLists.txt  package.xml
socket_test/: MakeFile  client  client.cpp  control.cpp  control.hpp  server  server.cpp
(+110 files in other folders)
