<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman</name>
  <version>0.0.0</version>
  <description>ROS2 package for Yaskawa Motoman manipulators (metapackage).</description>
  
  <!-- The original author is Shaun Edwards -->
  <!-- <author>Shaun Edwards</author>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer> -->
  <author>tc-huang</author>
  <maintainer email="tzu.chun.huang.tw@gmail.com">tc-huang</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/tc-huang/motoman</url>
  <url type="bugtracker">https://github.com/tc-huang/motoman</url>
  <url type="repository">https://github.com/tc-huang/motoman</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_mh5_support</exec_depend>
  <exec_depend>motoman_msgs</exec_depend>
  <exec_depend>motoman_resources</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
