<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_driver</name>
  <version>0.0.0</version>
  <description>ROS2 nodes for interfacing with Yaskawa Motoman robot controllers.</description>
  
  <!-- The original authors are Jeremy Zoss, Ted Miller and Eric Marcil. -->
  <!-- <author>Jeremy Zoss (Southwest Research Institute)</author>
  <author>Ted Miller (MotoROS) (Yaskawa Motoman)</author>
  <author>Eric Marcil (MotoROS) (Yaskawa Motoman)</author>
  <maintainer email="jeremy.zoss@swri.org">Jeremy Zoss (Southwest Research Institute)</maintainer>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer> -->
  <author>tc-huang</author>
  <maintainer email="tzu.chun.huang.tw@gmail.com">tc-huang</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- <depend>actionlib</depend>
  <depend>actionlib_msgs</depend> -->
  <depend>control_msgs</depend>
  <!-- <depend>industrial_msgs</depend> -->
  <!-- <depend>industrial_robot_client</depend> -->
  <!-- <depend>industrial_utils</depend> -->
  <depend>motoman_msgs</depend>
  <!-- <depend>roscpp</depend> -->
  <depend>sensor_msgs</depend>
  <depend>simple_message</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
