<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_hc20_support</name>
  <version>0.3.5</version>
  <description>
    <p>ROS-Industrial support for the Motoman HC20 (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman HC20, HC20DTP and HC30PL manipulators. The HC20 base model
      also supports the DT and XP variants.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>HC20</li>
      <li>HC20DT - Same as HC20</li>
      <li>HC20XP - Same as HC20</li>
      <li>HC20DTP</li>
      <li>HC30PL</li>
   </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in: <em>YASKAWA MOTOMAN-HC20DT INSTRUCTIONS (HW1486129)</em>
      version <em>190085-1CD, rev 1</em>,
      <em>YASKAWA MOTOMAN-HC20DTP INSTRUCTIONS (HW2480394)</em> version
      <em>193888-1CD, rev 3</em> and
      <em>YASKAWA MOTOMAN-HC30PL INSTRUCTIONS (HW2480886)</em> version
      <em>196230-1CD, rev 2</em>.
    </p>
    <p>
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      NOTE: the HC30PL is the palletizing variant of the HC20 where the wrist
      joints ('joint_4_r' and 'joint_5_b') are constrained to orient the flange normal 
      to within +/-15 degrees with respect to the ground plane normal.
      Unfortunately, this limitation can't be modelled using URDF joint limits,
      and must therefore be handled by the motion planner or other process
      planning trajectories.
      Failure to take this constraint into account will cause the Yaskawa robot
      controller to abort trajectory execution and to raise alarms on the Teach
      Pendant.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Eric Marcil</author>
  <maintainer email="techsupport@motoman.com">Eric Marcil</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">http://wiki.ros.org/motoman_hc20_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
