<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_mh5_support</name>
  <version>0.0.0</version>
  <description>
    <p>ROS2 support for the Motoman MH5 (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman MH5 manipulators.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>MH5 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online 
      http://www.motoman.com/datasheets/mh5.pdf
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  
  <!-- The original author is Shaun Edwards -->
  <!-- <author>Shaun Edwards</author>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer> -->
  
  <author>tc-huang</author>
  <maintainer email="tzu.chun.huang.tw@gmail.com">tc-huang</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/tc-huang/motoman</url>
  <url type="bugtracker">https://github.com/tc-huang/motoman</url>
  <url type="repository">https://github.com/tc-huang/motoman</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <!-- <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_resources</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
